Alteração de fundo

--- a/treinos/style.css
+++ b/treinos/style.css
@@ -39,7 +39,7 @@
 
 .titulo-principal {
     padding: 100px;
-    background-image: url(imagens/images.jpg);
+    background-image: url(imagens/pilares_da_criacao.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
