--- a/treinos/style.css
+++ b/treinos/style.css
@@ -39,7 +39,7 @@
 
 .titulo-principal {
     padding: 100px;
-    background-image: url(imagens/pilares_da_criacao.jpg);
+    background-image: url(imagens/images.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -95,7 +95,7 @@ p {
 
 #img2 {
     background-color: black;
-    background-image: url(imagens/universo.webp);
+    background-image: url(imagens/pilares_da_criacao.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
